Remove sudo from command

--- a/dockerfiles/oauth/Dockerfile
+++ b/dockerfiles/oauth/Dockerfile
@@ -2,7 +2,7 @@ FROM debian:12.2-slim
 
 RUN apt-get update && \
     apt-get install -y curl
-RUN curl -fsSL https://deb.nodesource.com/setup_16.x | sudo -E bash -
+RUN curl -fsSL https://deb.nodesource.com/setup_20.x | bash -
 RUN apt-get update && \
     apt-get install -y nodejs
 
