--- a/dockerfiles/oauth/Dockerfile
+++ b/dockerfiles/oauth/Dockerfile
@@ -1,10 +1,13 @@
 FROM debian:12.2-slim
 
+ENV NODE_MAJOR=20
 RUN apt-get update && \
-    apt-get install -y curl
-RUN curl -fsSL https://deb.nodesource.com/setup_20.x | bash -
+    apt-get install -y ca-certificates curl gnupg && \
+    mkdir -p /etc/apt/keyrings && \
+    curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | sudo gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg
+RUN echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_$NODE_MAJOR.x nodistro main" | sudo tee /etc/apt/sources.list.d/nodesource.list
 RUN apt-get update && \
-    apt-get install -y nodejs
+    apt-get install nodejs -y
 
 RUN git clone https://github.com/vencax/netlify-cms-github-oauth-provider.git oauth
 RUN cd oauth
