--- a/.github/workflows/oauth.yml
+++ b/.github/workflows/oauth.yml
@@ -32,6 +32,6 @@ jobs:
         uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
         with:
           context: "{{defaultContext}}:dockerfiles/oauth"
-          push: false
+          push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
