--- a/.github/workflows/oauth.yml
+++ b/.github/workflows/oauth.yml
@@ -1,8 +1,8 @@
 name: oauth image
 
-on:
-  release:
-    types: [published]
+on: [push]
+#  release:
+#    types: [published]
 
 env:
   REGISTRY: ghcr.io
@@ -17,6 +17,10 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       - name: Log in to the Container registry
         uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
         with:
