Use 1.0.0 of oauth script

--- a/dockerfiles/oauth/Dockerfile
+++ b/dockerfiles/oauth/Dockerfile
@@ -10,6 +10,8 @@ RUN apt-get update && \
     apt-get install nodejs -y
 
 RUN git clone https://github.com/vencax/netlify-cms-github-oauth-provider.git oauth
+RUN cd oauth && \
+    git checkout 1.0.0
 WORKDIR oauth
 RUN npm install
 
