--- a/.github/workflows/oauth.yml
+++ b/.github/workflows/oauth.yml
@@ -1,8 +1,8 @@
 name: oauth image
 
-on: [push]
-#  release:
-#    types: [published]
+on: 
+  release:
+    types: [published]
 
 env:
   REGISTRY: ghcr.io
@@ -37,6 +37,6 @@ jobs:
         with:
           context: "{{defaultContext}}:dockerfiles/oauth"
           platforms: linux/amd64,linux/arm64
-          push: false
+          push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
