--- a/dockerfiles/oauth/docker-compose.yml
+++ b/dockerfiles/oauth/docker-compose.yml
@@ -6,13 +6,7 @@ services:
     ports:
       - '3000:80'
     environment:
-      OAUTH_CLIENT_ID: /run/secrets/client_id
-      OAUTH_CLIENT_SECRET: /run/secrets/client_secret
-    secrets:
-      - client_id
-      - client_secret
-secrets:
-  client_id:
-    file: ./secrets/client_id
-  client_secret:
-    file: ./secrets/client_secret
+      OAUTH_CLIENT_ID: ${CLIENT_ID}
+      OAUTH_CLIENT_SECRET: ${CLIENT_SECRET}
+      PORT: 80
+      ORIGINS: ingenjorsarbeteforklimatet.se
