--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,17 @@
 version: '3.8'
 services:
-  app:
+  nginxpm:
+    image: 'jc21/nginx-proxy-manager:latest'
+    restart: unless-stopped
+    ports:
+      - '80:80'
+      - '81:81'
+      - '443:443'
+    volumes:
+      - ./data:/data
+      - ./letsencrypt:/etc/letsencrypt
+
+  oauth:
     image: 'ghcr.io/ingenjorsarbete-for-klimatet/infrastructure/oauth:latest'
     restart: unless-stopped
     ports:
