--- a/.github/workflows/oauth-test-build.yml
+++ b/.github/workflows/oauth-test-build.yml
@@ -1,8 +1,7 @@
 name: oauth image test build
 
-on: [push]
-#  release:
-#    types: [published]
+on:
+  pull_request:
 
 env:
   REGISTRY: ghcr.io
@@ -35,7 +34,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
         with:
-          context: "{{defaultContext}}:dockerfiles/oauth"
+          context: "{{defaultContext}}:services/oauth"
           platforms: linux/amd64,linux/arm64
           push: false
           tags: ${{ steps.meta.outputs.tags }}
