--- a/admin/greenhouse-majorna/config.yml
+++ b/admin/greenhouse-majorna/config.yml
@@ -7,6 +7,10 @@ backend:
 locale: 'sv'
 publish_mode: editorial_workflow
 media_folder: 'content/data'
+slug:
+  encoding: "ascii"
+  clean_accents: true
+  sanitize_replacement: "-"
 
 collections:
   - name: 'post'
