--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,16 @@ services:
     networks:
       - ifknet
 
+  ifk-sverige:
+    image: 'httpd:2.4-alpine'
+    restart: unless-stopped
+    ports:
+      - '2001:80'
+    volumes:
+      - ./services/ifk-sverige:/usr/local/apache2/htdocs/
+    networks:
+      - ifknet
+
   oauth:
     image: 'ghcr.io/ingenjorsarbete-for-klimatet/infrastructure/oauth:latest'
     restart: unless-stopped
